[project]
name = "cubesat-mission-reconstruction"
version = "0.1.0"
description = "Deterministic post-hoc reconstruction of mission timelines and effective configuration state for CubeSat-class missions."
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
